--- a/style.css
+++ b/style.css
@@ -1,36 +1,51 @@
+body {
+    background-color:#cbf3f0;
+}
+
 .container {
     display: flex;
+    justify-content: center;
 }
 
 #grid {
-    width: 200px;
-    height: 400px;
-    background-color: yellow;
+    width: 300px;
+    height: 600px;
+    background-color: #ffdab9;
     display: flex;
     flex-wrap: wrap;
 }
 
 #grid div {
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
 }
 
 .tetromino {
-    background-color: blue;
+    background-color: #90be6d;
 }
 
+h3.score {
+    display:inline-block;
+    margin-left:10%;
+}
 
+#start-button {
+    padding: 20px;
+    background-color: #90be6d;
+    display: inline-block;
+    cursor: pointer;
+    margin-left:20px;
+}
 
 div.mini-grid {
-    width: 80px;
-    height: 80px;
+    width: 120px;
+    height: 120px;
     display: flex;
     flex-wrap: wrap;
-    background-color: yellow;
     margin-left:50px;
 }
 
 .mini-grid div {
-    height: 20px;
-    width: 20px;
+    height: 30px;
+    width: 30px;
   }
