--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 div.instrux {
     width:300px;
     margin-top:20px;
-    font-size: 20px;
+    font-size: 14px;
     padding-right:20px;
 }
 
@@ -84,12 +84,28 @@ h3.score {
     color: #fff;
 }
 
+#newGameButton {
+    padding: 20px;
+    display: inline-block;
+    display: none;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 20px;
+    background-color: rgb(58, 134, 255);
+    color: #fff;
+}
+
+
 
 h3.mgHeader {
     margin-left: 50px;
     text-align: center;
-    font-size: 20px;
+    font-size: 22px;
 
+}
+
+div.mini-grid-container {
+    width:200px;
 }
 
 div.mini-grid {
